<resources>
    <string name="app_name">Novel</string>

    <!-- 登录,注册 页面-->
    <string name="novel_reader">自制小说阅读器</string>
    <string name="username">用户名</string>
    <string name="password">密码</string>
    <string name="login">登录</string>
    <string name="forget_password">忘记密码？</string>
    <string name="register_account">注册账号</string>
    <string name="register">注册</string>
    <string name="input_user_name">请输入用户名</string>
    <string name="input_pwd">请输入密码</string>
    <string name="input_pwd_again">请再次输入密码</string>
    <string name="existing_account">已有账号</string>

    <string-array name="novel_tab">
        <item>书架</item>
        <item>账户</item>
    </string-array>
</resources>
