<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="@color/white"
    android:padding="20dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_white_fill"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/username"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:background="@null"
                android:drawableLeft="@mipmap/ic_user"
                android:drawablePadding="10dp"
                android:hint="@string/input_user_name"
                android:paddingStart="10dp"
                android:textSize="14sp"
                tools:ignore="RtlHardcoded,RtlSymmetry" />

            <TextView
                android:id="@+id/number_clean"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="20dp"
                android:background="@mipmap/ic_clean"
                android:visibility="gone" />
        </LinearLayout>


        <View style="@style/login_line" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="44dp">

            <EditText
                android:id="@+id/firstInput"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@null"
                android:drawableLeft="@mipmap/ic_pwd"
                android:drawablePadding="10dp"
                android:hint="@string/input_pwd"
                android:inputType="textPassword"
                android:paddingStart="10dp"
                android:textSize="14sp"
                tools:ignore="RtlHardcoded,RtlSymmetry" />

            <ImageView
                android:id="@+id/eyes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="10dp"
                android:background="@mipmap/ic_close_eyes" />

        </RelativeLayout>
        <View style="@style/login_line" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="44dp">

            <EditText
                android:id="@+id/secondInput"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@null"
                android:drawableLeft="@mipmap/ic_pwd"
                android:drawablePadding="10dp"
                android:hint="@string/input_pwd_again"
                android:inputType="textPassword"
                android:paddingStart="10dp"
                android:textSize="14sp"
                tools:ignore="RtlHardcoded,RtlSymmetry" />

            <ImageView
                android:id="@+id/eyes1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="10dp"
                android:background="@mipmap/ic_close_eyes" />

        </RelativeLayout>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="10dp" />

    <TextView
        android:id="@+id/register"
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/bg_login_fill"
        android:gravity="center"
        android:text="@string/register"
        android:textColor="@color/white"
        android:textSize="@dimen/font_18" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_marginTop="@dimen/space_20"
        android:orientation="horizontal"
        android:visibility="visible">

        <TextView
            android:id="@+id/existingAccount"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:background="@drawable/bg_login_fill"
            android:gravity="center"
            android:textColor="@color/white"
            android:text="@string/existing_account"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/forgetPassword"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center|right"
            android:text="@string/forget_password"
            android:visibility="gone"
            tools:ignore="RtlHardcoded" />
    </LinearLayout>

</LinearLayout>